--- a/css/style.css
+++ b/css/style.css
@@ -726,7 +726,19 @@ h2 {
 
 
 /**BODA/CIVIL*/
-
+@media (max-width: 1024px){
+    .main-section li{
+        display: inline;
+        font-size: 24px;
+        padding: 35px;
+    }
+    .img-boda{
+        margin: 0;
+    }
+    .pareja-civil{
+        margin-top: 15px;
+    }
+}
 @media (max-width: 820px){
     .img-boda{
         display: flex;
@@ -746,19 +758,24 @@ h2 {
         margin-bottom: 15px;
     }
 }
+/**
 @media (max-width: 794px){
     .pareja-civil{
         display: flex;
         align-self: center;
     }
 }
-
+*/
 @media (max-width:768px){
     .main-section li{
         display: inline;
         font-size: 17px;
-        padding: 20px;
+        padding: 25px;
 
+    }
+    .descripcion-boda p{
+        font-size: 17px;
+        text-align: center;
     }
     .navBar2{
         background-color: beige;
@@ -770,8 +787,8 @@ h2 {
     }
     .familia-libreta{
         display: flex;
-        align-self: center;
-        width: 613px;
+        align-self: flex-end;
+        width: 580px;
     }
     .casados-mirandose{
         display: flex;
@@ -790,6 +807,7 @@ h2 {
         margin-left: 20px;
     }
 }
+/**
 @media (max-width:700){
     .navBar2 li{
         font-size: 20px;
@@ -824,6 +842,7 @@ h2 {
         height: 400px;
     }
 }
+*/
 @media (max-width:572px){
     .familia-libreta{
         width: 488px;
@@ -832,6 +851,10 @@ h2 {
     .casados-mirandose{
         width: 500px;
         height: 720px;
+    }
+    .pareja-civil{
+        width: 520px;
+        height: 420px;
     }
 }
 @media (max-width:553px){
@@ -861,7 +884,17 @@ h2 {
         height: 400px;
     }
 }
-@media (max-width:483px){
+
+    @media (max-width:425px){
+    .container-1{
+        position: static;
+        }
+    .main-section ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #ebdfc1;
+        }
     .img-boda{
         display: flex;
         flex-direction: column;
@@ -870,6 +903,7 @@ h2 {
     .familia-libreta{
         width: 400px;
         height: 300px;
+        align-self: center;
     }
     .casados-mirandose{
         width: 350px;
@@ -880,16 +914,40 @@ h2 {
         height: 300px;
     }
     .pareja-civil{
-        width: 430px;
-        height: 300px;
+        align-self: center;
+        padding-left: 20px;
+        width: 410px;
+        height: 290px;
     }
-}
-@media (max-width: 417px){
+    }
+@media (max-width: 375px){
     .familia-libreta{
         width:350px;
         height: 280px;
     }
+    .pareja-civil{
+        width: 360px;
+        height: 270px;
+    }
 }
+@media (max-width:320px){
+    .descripcion-boda p{
+        font-size: 16px;
+    }
+    .familia-libreta{
+        width: 315px;
+        height: 250px;
+    }
+    .casados-mirandose{
+        width: 310px;
+        height: 560px;
+    }
+    .mujer-mirandomarido{
+        width: 270px;
+        height: 270px;
+    }
+}
+/**
 @media (max-width:401px){
     .casados-mirandose{
         width: 280px;
@@ -901,7 +959,8 @@ h2 {
         height: 220px;
     }
 }
-@media (max-width:359px){
+*/
+@media (max-width:320px){
     .mail-section ul{
         display: flex;
         flex-direction: column;
@@ -923,10 +982,17 @@ h2 {
     .pareja-civil{
         width: 300px;
         height: 180px;
+        display: flex;
+        align-self: center;
     }
 }
 /**RESPONSIVE EVENTOS*/
 @media (max-width: 1024px){
+    .main-section li{
+        display: inline;
+        font-size: 24px;
+        padding: 35px;
+        }
     .familia-sonriendo{
         display: flex;
         flex-direction: column;
@@ -990,10 +1056,17 @@ h2 {
 }
 */
 @media (max-width:768px){
-    .mail-section li{
+    .main-section li{
         display: inline;
+        font-size: 16px;
+        padding: 28px;
+    }
+    .descripcion-eventos p{
+        text-align: center;
         font-size: 17px;
-        padding: 20px;
+    }
+    .navBar2{
+        background-color: beige;
     }
     .nene-sonriendo{
         width: 320px;
@@ -1048,7 +1121,16 @@ h2 {
     }
 }
 */
-@media (max-width: 425px){
+@media (max-width: 475px){
+    .container-1{
+        position: static;
+        }
+    .main-section ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #ebdfc1;
+        }
     .main-section li{
         display: flex;
         flex-direction: column;
@@ -1089,6 +1171,9 @@ h2 {
     }
 }
 @media (max-width:320px){
+    .descripcion-eventos p{
+        font-size: 16px;
+    }
     .nene-sonriendo{
         width: 220px;
         height: 220px;
