--- a/css/style.css
+++ b/css/style.css
@@ -680,7 +680,7 @@ h2 {
     text-align: center;
     width: 100%;
     height: 100px;
-    padding-left: 100px;
+    padding: 60px;
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: 'Roboto', sans-serif;
