--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,7 @@ h2 {
     margin-top: 0px;
     font-size: 20px;
     color: black;
+    background-color: #C2B8A3;
 }
 .descripcion-eventos{
     background-color: #C2B8A3;
@@ -311,22 +312,119 @@ h2 {
     width: 90%;
     margin: auto;
 
+} 
+.galeria-book{
+    background-color: #C2B8A3;
+    background-size: contain;
+    height: 100vh;
+
 }
-/**.galeria-book{
+
+/**GRIDS*/
+.img-book{
+    background-color:#C2B8A3;
+    background-size: contain;
     display: grid;
-    width: 90%;
-    height: 90vh;
-    margin: auto;
-    grid-template-columns: repeat(8,1fr);
+    height: 100vh;
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4,1fr);
     grid-area: 
-    "img1 img2 img3 img4"
-    "img1 img2 img3 img4"
-    "img1 img2 img3 img4"
-    "img1 img2 img3 img4"
     
+    "img1 img1"
+    "img2 img2"
+    "img3 img3"
+    "img4 img4"
     ;
+}
+.hombre-panza{
+    grid-area: img1;
+    object-fit: cover;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    padding: 20px;
+}
+.pareja-mirandose{
 
+    grid-area: img2;
+    object-fit: cover;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    margin-left: 20px;
+}
+.mujer-panza{
+
+    grid-area: img3;
+    object-fit: cover;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    margin: 0;
+
+}
+.pareja-mano{
+
+    grid-area: img4;
+    object-fit:cover;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 4;
+    justify-self: center;
+}
+
+/**
+.img1{
+    
+    grid-area: img1;
+    height: 100%;
+    align-self: flex-start;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    padding: 20px;
+    margin: 0;
+}
+.img2{
+    grid-area: img2;
+    height: 0px;
+    margin: 0;
+    object-fit: cover;
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    display: flex;
+    
+    
+}
+.img3{
+    grid-area: img3;
+    height: 100%;
+    object-fit: cover;
+    grid-column-start: 0;
+    grid-column-start: 3;
+    grid-row-start: 3;
+    grid-row-end: 5;
+    display: flex;
+    justify-content: flex-start;
+    
+}
+.img4{
+    grid-area: img4;
+    height: auto;
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    align-self: flex-start;
+    margin-bottom: 0;
+    padding-right: 20px;
 }
 */
 .galeria-boda{
@@ -486,6 +584,7 @@ h2 {
     width: 212px;
     height: 544px;
 }
+/**
 .galeria-book{
     object-fit: cover;
     display: grid;
@@ -548,19 +647,25 @@ h2 {
     padding-bottom: 10px;
 
 }
+*/
+.hombre-panza {
+    margin-top: 50px;
+    width: 339px;
+    height: 801px;
+}
+.pareja-mirandose {
+    width: 669px;
+    height: 389px;
+    }
 .mujer-panza {
-
-    margin-top: 40px;
+    margin: 0;
     width: 455px;
     height: 758px;
 }
 
 .pareja-mano {
-
-    margin-top: 30px;
     width: 405px;
     height: 405px;
-    margin-bottom: 30px;
 }
 
 .familia-libreta {
