modificaciones y eliminacion de page

--- a/css/style.css
+++ b/css/style.css
@@ -611,7 +611,7 @@ h2 {
     height: 128px;
 }
 
-.pareja-mirandose {
+.pareja-byn {
     display: flex;
     align-self: flex-start;
     margin-top: 40px;
